--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,3 +36,6 @@ jobs:
       run: docker run hello-world
     - name: push to docker Hub
       uses: opspresso/action-docker@v0.3.9
+      with: 
+        username: maissa47
+        password: ${{DOCKER_PASSWORD}}
