--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,12 +34,16 @@ jobs:
     - name: check docker installation
       run: docker run hello-world
       
-    - name: Build & Push to Docker Hub
-      uses: opspresso/action-docker@master
+    - name: Login to DockerHub
+      if: GitHub.event_name != 'pull_request'
+      uses: docker/login-action@v1
       with:
-          args: --docker
-      env:
-          USERNAME: maissa47
-          PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          TAG_NAME: "v0.0.1"
-          BUILDX: "true"
+         username: maissa47
+         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+     
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+         context: .
+         push: ${{ GitHub.event_name != 'pull_request' }}
+       
