--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,7 +39,7 @@ jobs:
       uses: docker/login-action@v1
       with:
          username: maissa47
-         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
      
     - name: Build and push
       uses: docker/build-push-action@v2
